--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "@rkaliev/nuxtjs-yandex-metrika",
-  "version": "1.3.0",
+  "name": "@xrei/nuxtjs-yandex-metrika",
+  "version": "1.0.0",
   "description": "NuxtJS Yandex.Metrika Module/Plugin",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rkaliev/nuxtjs-yandex-metrika.git"
+    "url": "https://github.com/xrei/nuxt-yandex-metrica.git"
   },
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ruslan Aliev",
+  "author": "rei",
   "contributors": [
     {
       "name": "Ruslan Aliev",
       "email": "rkaliev1988@gmail.com"
+    },
+    {
+      "name": "rei",
+      "email": "romanrei.dev@gmail.com"
     }
   ],
   "files": [
